force-app/main/default/objects/SVMXC__PM_Schedule_Template__c/SVMXC__PM_Schedule_Template__c.object-meta.xml
<CustomObject>
    <description>Time based schedules for PM Plan Template are defined here.</description>
    <label>PM Schedule Template</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedule Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>