force-app/main/default/objects/SVMXC__PM_Schedule_Template__c/fields/SVMXC__Recurring__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>