force-app/main/default/objects/SVMXC__PM_Schedule_Template__c/fields/SVMXC__SM_Max_Activity_Changed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Max_Activity_Changed__c</fullName>
    <description>Minimum threshold above which adjustment of schedules should be applied.</description>
    <inlineHelpText>Minimum threshold above dynamic adjustment of schedules should be applied</inlineHelpText>
    <label>Max Activity Changed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>