force-app/main/default/objects/SVMXC__PM_Schedule_Template__c/fields/SVMXC__SM_Min_Activity_Changed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Min_Activity_Changed__c</fullName>
    <label>Min Activity Changed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>